[package]
name = "discord-yone-utils"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.76"
axum = { version = "0.7.2", features = ["macros", "multipart", "tracing", "ws", "http2"] }
clap = { version = "4.4.11", features = ["derive"] }
dotenv = "0.15.0"
ed25519-dalek = "2.1.0"
hex = "0.4.3"
reqwest = { version = "0.11.23", features = ["json"] }
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
serde_repr = "0.1.17"
thiserror = "1.0.51"
tokio = { version = "1.35.1", features = ["full"] }
tower = "0.4.13"
rand = "0.8.5"
